--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 8080
+feign:
+  hystrix:
+    enabled: true
+hystrix:
+  command:
+    default:
+      execution.isolation.thread.timeoutInMilliseconds: 500
 spring:
   application:
     name: order
@@ -42,6 +49,7 @@ logging:
 api:
   url:
     payment: localhost:8082
+    store: localhost:8084
 
 
 server:
@@ -76,5 +84,6 @@ spring:
 api:
   url:
     payment: localhost:8080
+    store: localhost:8080
 
 
